...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KEv-79-bij">
                                <rect key="frame" x="110" y="256" width="155" height="155"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="KEv-79-bij" secondAttribute="height" id="UTd-cu-JQv"/>
                                </constraints>
                                <state key="normal" image="Record"/>
                                <connections>
                                    <action selector="startRecordingTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XvS-AB-VQS"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Z5-7I-L9p">
                                <rect key="frame" x="157.5" y="459.5" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="aB8-ay-C15"/>
                                    <constraint firstAttribute="width" constant="60" id="of6-Gt-xZq"/>
                                </constraints>
                                <state key="normal" image="Stop"/>
                                <connections>
                                    <action selector="stopRecordingTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZBN-EX-Ay9"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to start recording" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lh4-CW-ok6">
                                <rect key="frame" x="105" y="423" width="165" height="20.5"/>
...
                                                        <connections>
                                                            <action selector="playSoundForButton:" destination="NBL-xi-9uG" eventType="touchUpInside" id="Q5J-9l-J8T"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x3o-XU-KH5">
                                                        <rect key="frame" x="0.0" y="260" width="90" height="90"/>
                                                        <state key="normal" image="LowPitch"/>
                                                        <connections>
                                                            <action selector="playSoundForButton:" destination="NBL-xi-9uG" eventType="touchUpInside" id="BGQ-ND-3uD"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                                <variation key="heightClass=compact" axis="horizontal"/>
...
                                                        <connections>
                                                            <action selector="playSoundForButton:" destination="NBL-xi-9uG" eventType="touchUpInside" id="rI0-sh-0Dt"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gGL-8k-kJK">
                                                        <rect key="frame" x="0.0" y="260" width="90" height="90"/>
                                                        <state key="normal" image="Fast"/>
                                                        <connections>
                                                            <action selector="playSoundForButton:" destination="NBL-xi-9uG" eventType="touchUpInside" id="1mg-Qc-xyA"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                                <variation key="heightClass=compact" axis="horizontal"/>
...
